force-app/main/default/objects/Email_Log__c/Email_Log__c.object-meta.xml
<CustomObject>
    <description>Object that stores the Email Request Logs, especially when failures happen and manual intervention is needed.</description>
    <label>Email Log</label>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>Email Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>