force-app/main/default/objects/Email_Log__c/fields/Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Log_Message__c</fullName>
    <description>Log Message</description>
    <inlineHelpText>Log Message</inlineHelpText>
    <label>Log Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>