force-app/main/default/objects/Email_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id of the Salesforce Record</description>
    <inlineHelpText>Id of the Salesforce Record</inlineHelpText>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>