force-app/main/default/objects/Email_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Request JSON</description>
    <inlineHelpText>Request JSON</inlineHelpText>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>