force-app/main/default/objects/Email_Log__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>Id of the Email Template in the External System</description>
    <inlineHelpText>Id of the Email Template in the External System</inlineHelpText>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>